# sift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  compare.py  scifact_queries.txt
crates/sift/: Cargo.toml
crates/sift-core/: Cargo.toml
crates/sift-core/src/: index_set.rs  lib.rs  open.rs  retrieval.rs  retrieval_variants.rs  spell.rs
crates/sift/src/: build.rs  clean.rs  index_cmd.rs  main.rs  replicate.rs  search.rs  spell.rs
crates/sift/src/serve/: admin.rs  ce.rs  filters.rs  mod.rs  query.rs  replicate_srv.rs  rerank.rs  writes.rs
crates/sift/src/serve/query/: endpoints.rs  request.rs
docs/: REFERENCE.md
examples/: animals.jsonl
reranker/: gen_candidates.py  teacher_score.py  train_distill.py  train_lgbm.py
sift_build/: __init__.py  build.py  cli.py
tests/: beir_eval.py  parity_test.sh  regression.py  regression_baseline.json
