[package]
name = "sift-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Memory-mapped sparse retrieval core for sift."

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
memmap2.workspace = true
tokenizers.workspace = true
half = { version = "2", features = ["bytemuck"] }
libc = "0.2"

[dev-dependencies]
hegeltest = "0.15.2"
