[package]
name = "sift"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CPU-first semantic sparse search engine."

[[bin]]
name = "sift"
path = "src/main.rs"

[features]
default = ["multithread"]
# Edge profile: single-threaded, no rayon, smaller binary, lower peak power.
edge = []
# Multithreaded build & scoring (default for cloud/dev).
multithread = ["dep:rayon"]
# Optional ONNX cross-encoder reranker (`serve --cross-encoder <dir>`).
# Pulls in onnxruntime; off by default so the standard query path avoids model inference.
# Build with `--features cross-encoder` to enable.
cross-encoder = ["dep:ort"]

[dependencies]
sift-core = { version = "0.1.0", path = "../sift-core" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokenizers.workspace = true

clap = { version = "4", features = ["derive", "env"] }
rayon = { version = "1.10", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }
hf-hub = "0.4.3"
ureq = { version = "2.12", features = ["json"] }
safetensors = "0.4"
half = { version = "2", features = ["bytemuck"] }
ahash = "0.8"
lru = "0.12"

[dev-dependencies]
hegeltest = "0.15.2"
